2013-07-19  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* cygserver_ipc.h (ipc_retval::ipc_retval): Take ssize_t as argument
	to make sure entire ipc_retval union is initialized on all supported
	platforms.

2013-07-18  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (normalize_posix_path): Start checking path before ".." at
	dst, rather than at dst_start, otherwise suffer loss of one leading
	slash in case of UNC paths.

2013-07-17  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* winsup.h (cygbench): Fix declaration to match definition.
	* dcrt0.cc (initial_env): Remove unused variable.

2013-07-15  Corinna Vinschen  <corinna@vinschen.de>

	Remove /dev/mem, /dev/kmem, /dev/port support.
	* Makefile.in (DLL_OFILES): Drop fhandler_mem.o.
	(fhandler_mem_CFLAGS): Remove rule.
	* devices.in (enum fh_devices): Remove FH_MEM, FH_KMEM and FH_PORT.
	* devices.cc: Regenerate.
	* dtable.cc (fh_alloc): Drop handling for FH_MEM, FH_KMEM and FH_PORT.
	* fhandler.h (class fhandler_dev_mem): Remove.
	* fhandler_mem.cc: Remove file.
	* globals.cc (ro_u_pmem): Remove.
	* mmap.cc (fhandler_dev_mem::mmap): Remove.
	(fhandler_dev_mem::munmap): Remove.
	(fhandler_dev_mem::fixup_mmap_after_fork): Remove.

2013-07-15  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 22.

2013-07-15  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_native): Fix common prefix search.  Enhance comment.

2013-07-11  Corinna Vinschen  <corinna@vinschen.de>

	* uname.cc (uname): Drop unused code.

2013-07-10  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* gentlsoffsets: Clean up a little.

	* thread.cc (semaphore::_fixup_after_fork): Report on potential problem
	parameter.  Make sure that currentvalue is never zero.
	(semaphore::init): Make cosmetic change.

2013-07-10  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.sc.in (.text.*): Fold into .text on all platforms.
	(.eh_frame): Add section.